<resources>
    <string name="app_name">The French Pastry</string>
    <string name="french_pastry">شیرینی فرانسوی</string>
    <string name="enter_the_app">ورود به برنامه</string>
    <string name="login_background">login_background</string>
    <string name="entering_message">جهت ورود به برنامه شماره خود را در کادر
        زیر وارد کرده، سپس کد ارسالی به موبایل‌تان را در برنامه وارد کنید.</string>
    <string name="for_show">for show</string>
    <string name="_09">09*********</string>
    <string name="Wrong">خطا</string>
    <string name="connect_to_internet">لطفا گوشی خود را به اینترنت متصل کنید</string>
    <string name="wrong">خطا</string>
    <string name="settings">تنظیمات</string>
    <string name="retry">تلاش مجدد</string>
    <string name="verify_code">کد تایید</string>
    <string name="resend">ارسال مجدد</string>
    <string name="time">00:59</string>
    <string name="edit_number">ویرایش شماره</string>
    <string name="shopping_logo">shopping_logo</string>
    <string name="arrow">arrow</string>
    <string name="shopping_img">shopping_img</string>
    <string name="back_logo">back_logo</string>
    <string name="image">image</string>
    <string name="user_image">user_image</string>
    <string name="pastry_image">pastry_image</string>
    <string name="shpping_image">shpping_image</string>
    <string name="polygon_image">polygon_image</string>
    <string name="cake_image">cake_image</string>
    <string name="home_image">home_image</string>
    <string name="close">close</string>
    <string name="my_name">مرتضی گودرزی</string>
    <string name="_09159943215">09159943215</string>
    <string name="my_orders">سفارشات من</string>
    <string name="about_us">درباره ما</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="upgrade">بروزرسانی نرم‌افزار</string>
    <string name="exit">خروج از حساب کاربری</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="img_back_nav">img_back_nav</string>
    <string name="newest">تازه‌ترین شیرینی‌ها</string>
    <string name="more">بیشتر</string>
    <string name="img">img</string>
    <string name="tooman">تومان</string>
    <string name="off_desc">off_desc</string>
    <string name="image_desc">image_desc</string>
    <string name="tops">محبوب‌ترین‌ها</string>
    <string name="banner_desc">banner_desc</string>
    <string name="main_image_desc">main_image_desc</string>
    <string name="shopping_desc">shopping_desc</string>
    <string name="sell">تومان</string>
    <string name="slider_desc">slider_desc</string>
</resources>