<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@drawable/login_background"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLoginPastry"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/login_background"
        android:scaleType="fitXY"
        android:src="@drawable/img_pastry_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:contentDescription="@string/french_pastry"
        android:layout_height="200dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/black_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="30dp"
        android:text="@string/enter_the_app"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgLoginPastry" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/french_pastry"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginTop="3dp"
        android:text="@string/entering_message"
        android:textColor="@color/color_text_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.example.thefrenchpastry.ui.customView.CustomEditText
        android:id="@+id/text_input"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:hint_text="09*********"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:max="11"
        app:type="3" />

    <com.example.thefrenchpastry.ui.customView.CustomButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:buttonText="ارسال کد برای شماره من"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/text_input" />

</androidx.constraintlayout.widget.ConstraintLayout>