<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <View
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white_main"
        android:layoutDirection="rtl"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_alert"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/shopping_logo"
        android:src="@drawable/ic_alert"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgShopping"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/shopping_img"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imgBack"
        app:layout_constraintStart_toEndOf="@+id/imgBack"
        app:layout_constraintTop_toTopOf="@+id/imgBack"
        app:srcCompat="@drawable/ic_shopping_cart_black" />

    <ImageView
        android:id="@+id/black_logo"
        android:layout_width="93dp"
        android:layout_height="46dp"
        android:contentDescription="@string/back_logo"
        android:src="@drawable/black_logo"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:layout_marginEnd="14dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/arrow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_left" />

    <TextView
        android:id="@+id/txtAlertCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white_main"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6"
        tools:text="55" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/countGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="view6, txtAlertCount " />

    <View
        android:id="@+id/view6"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/back_circle_shopping_cart"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@drawable/back_top_view_bottom_nav"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>