<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="404dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/sliderViewPager"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_margin="8dp" />

            <com.example.thefrenchpastry.ui.customView.CustomRecyclerHorizontal
                android:id="@+id/new_pastry_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/newest"/>

            <com.example.thefrenchpastry.ui.customView.CustomRecyclerVertical
                android:id="@+id/special_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.example.thefrenchpastry.ui.customView.CustomRecyclerHorizontal
                android:id="@+id/topPastryRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/tops"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/imgBanner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/banner_desc" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>