<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NavigationDrawerActivity">
    <ImageView
        android:id="@+id/imgCloseNav"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCloseNav"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white_color200">

            <TextView
                android:id="@+id/txt_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintEnd_toEndOf="@+id/txt_orders"
                app:layout_constraintTop_toTopOf="@+id/imageView11" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_exit"
                app:layout_constraintEnd_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toBottomOf="@+id/view4488" />

            <View
                android:id="@+id/view4488"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/txt_upgrade" />

            <View
                android:id="@+id/view44858"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" />

            <TextView
                android:id="@+id/txt_contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                app:layout_constraintEnd_toEndOf="@+id/txt_about_us"
                app:layout_constraintTop_toTopOf="@+id/imageView9" />

            <View
                android:id="@+id/view448"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="364dp"
                android:layout_height="90dp"
                android:src="@drawable/back_navigation_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/my_name"
                android:textColor="@color/white_main"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />


            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/_09159943215"
                android:textColor="@color/white_main"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/textView10" />


            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_orders"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <TextView
                android:id="@+id/txt_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/my_orders"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintEnd_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6" />


            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_support"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/txt_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="پشتیبانی"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintEnd_toEndOf="@+id/txt_orders"
                app:layout_constraintTop_toTopOf="@+id/imageView8" />


            <View
                android:id="@+id/view4"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/txt_support" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/view4"
                app:srcCompat="@drawable/ic_about_us" />

            <TextView
                android:id="@+id/txt_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                app:layout_constraintEnd_toEndOf="@+id/txt_orders"
                app:layout_constraintTop_toTopOf="@+id/imageView7" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_contact_us"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/view448" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_upgrade"
                app:layout_constraintEnd_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toBottomOf="@+id/view44858" />

            <TextView
                android:id="@+id/txt_upgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upgrade"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                app:layout_constraintEnd_toEndOf="@+id/txt_orders"
                app:layout_constraintTop_toTopOf="@+id/imageView10" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:contentDescription="@string/img_back_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>